--- a/MotoristaService/src/main/resources/application.yml
+++ b/MotoristaService/src/main/resources/application.yml
@@ -14,6 +14,11 @@ spring:
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
 
   datasource:
     url: jdbc:postgresql://localhost:5432/pockafka
